Fix SonarQube settings

--- a/fastapi-app/sonar-project.properties
+++ b/fastapi-app/sonar-project.properties
@@ -11,3 +11,5 @@ sonar.host.url=http://localhost:9000
 
 # ?? ?? (??? ???? ???? ??? ??? ??)
 sonar.python.coverage.reportPaths=coverage.xml
+
+sonar.exclusions=**/*.js,**/*.css,**/*.html  # html 내부의 js 코드도 분석에서 제외
