--- a/fastapi-app/sonar-project.properties
+++ b/fastapi-app/sonar-project.properties
@@ -2,7 +2,7 @@ sonar.projectKey=fastapi_app
 sonar.projectName=FastAPI App
 sonar.projectVersion=1.0
 
-sonar.sources=.
+sonar.sources=fastapi_app
 
 sonar.host.url=http://localhost:9000
 
