--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,6 +62,28 @@ services:
       - "--prometheus_endpoint=/metrics"
     restart: unless-stopped
   
+  jmeter:
+    build:
+      context: ./jmeter
+      dockerfile: Dockerfile
+    container_name: jmeter
+    volumes:
+      - ./jmeter:/jmeter
+    command:
+      - jmeter
+      - -n
+      - -t
+      - /jmeter/fastapi_test_plan.jmx
+      - -l
+      - /jmeter/results.jtl
+      - -JBASE_URL=http://fastapi-app:5001
+      - -Jjmeter.save.saveservice.output_format=csv
+      - -e
+      - -o
+      - /jmeter/report
+    networks:
+      - loadtest-net
+  
 volumes:
   sonarqube_conf:
   sonarqube_data:
