--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -91,6 +91,8 @@ services:
     container_name: loki
     ports:
       - "3100:3100"
+    networks:
+      - loadtest-net
   
 volumes:
   sonarqube_conf:
